# spreadsheet-kata

./: Makefile  README.md  pyproject.toml  spreadsheet.py
tests/: test_spreadsheet.py
