[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet-kata"
version = "0.0.0"
description = "Spreadsheet kata implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
include = ["spreadsheet"]

[tool.pytest.ini_options]
pythonpath = ["."]
